k8s/prometheus/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
spec:
  selector:
    app: prometheus
  ports:
    - port: 80
      targetPort: 9090
      # nodePort: 30000
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: app-frontend-service
# spec:
#   selector:
#     app: app-frontend
#   ports:
#   - name: http
#     port: 3001
#     targetPort: 80
